# weatherlogger

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config_example.json  locations  plot.py  print_weather.py  weather_log.csv
src/: main.rs  weather.rs
