[package]
name = "weatherlogger"
version = "0.1.0"
authors = ["Fredrik Hagen Fasteraune <freddahf@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3.25"
mongodb = "2.3.1"
reqwest = "0.11.13"
